# iu-anomaly-detection

./: .gitignore  README.md  pyproject.toml
src/: api.py  main.py
src/anomaly/: models.py  views.py
src/data/: model.py
